<resources>
    <string name="app_name">SysMcu</string>
    <string name="usual">基本功能</string>
    <string name="can"> CAN </string>
    <string name="advanced">高级功能</string>
    <string name="can_test">CAN压力测试</string>
    <string name="storage">存储</string>
    <string name="version">MCU版本：</string>
    <string name="acc">ACC状态：</string>
    <string name="temp">MCU温度：</string>
    <string name="power">电源电压：</string>
    <string name="inner_storage">内部存储</string>
    <string name="outer_storage">外部存储</string>
    <string name="update">更新</string>
    <string name="choice">选择文件</string>
    <string name="file_not_exists">文件不存在</string>
    <string name="illegal_file">文件不合法</string>
    <string name="received">已接收</string>
    <string name="sent">已发送</string>
    <string name="baud_rate_title">波特率</string>
    <string name="send_title">发包数</string>
</resources>
