<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <Space
        android:id="@+id/divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_width="1px"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/version_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="22sp"
        android:text="@string/version"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/version_title"
        android:textColor="#000000"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/acc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/divider"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="22sp"
        android:text="@string/acc"/>

    <TextView
        android:id="@+id/acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/acc_title"
        app:layout_constraintLeft_toRightOf="@+id/acc_title"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/power_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/version_title"
        android:textSize="22sp"
        android:layout_marginTop="8dp"
        android:text="@string/power"/>

    <TextView
        android:id="@+id/power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/power_title"
        app:layout_constraintLeft_toRightOf="@+id/power_title"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/temp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@+id/version_title"
        android:textSize="22sp"
        android:layout_marginTop="8dp"
        android:text="@string/temp"/>

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/temp_title"
        app:layout_constraintLeft_toRightOf="@+id/temp_title"
        android:textColor="#000000"
        android:textSize="24sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/power_title">

        <View
            android:id="@+id/divider_in1"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#808080"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <Space
            android:id="@+id/divider_in2"
            android:layout_width="match_parent"
            android:layout_height="1px"
            app:layout_constraintTop_toBottomOf="@id/divider_in1"
            android:layout_marginTop="8dp"/>

        <Spinner
            android:id="@+id/input"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_in2"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/input_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            app:layout_constraintTop_toBottomOf="@id/divider_in2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/input"
            android:layout_marginLeft="8dp"
            android:textColor="#000000"
            android:textSize="24sp"
            android:text=""/>

        <Button
            android:id="@+id/input_get"
            android:layout_width="120dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/divider_in2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/input_value"
            android:layout_marginLeft="8dp"
            android:textSize="22sp"
            android:text="Get"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/layout_input">

        <View
            android:id="@+id/divider_out1"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#808080"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <Space
            android:id="@+id/divider_out2"
            android:layout_width="match_parent"
            android:layout_height="1px"
            app:layout_constraintTop_toBottomOf="@id/divider_out1"
            android:layout_marginTop="8dp"/>

        <Spinner
            android:id="@+id/output"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_out2"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/output_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            app:layout_constraintTop_toBottomOf="@id/divider_out2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/output"
            android:layout_marginLeft="8dp"
            android:textColor="#000000"
            android:textSize="24sp"
            android:text=""/>

        <Button
            android:id="@+id/output_get"
            android:layout_width="120dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/divider_out2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/output_value"
            android:layout_marginLeft="8dp"
            android:textSize="22sp"
            android:text="Get"/>

        <Button
            android:id="@+id/output_set_0"
            android:layout_width="120dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/divider_out2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/output_get"
            android:layout_marginLeft="8dp"
            android:textSize="22sp"
            android:text="Set 0"/>

        <Button
            android:id="@+id/output_set_1"
            android:layout_width="120dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/divider_out2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/output_set_0"
            android:layout_marginLeft="8dp"
            android:textSize="22sp"
            android:text="Set 1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>